--- a/src/Resources/views/_form.html.twig
+++ b/src/Resources/views/_form.html.twig
@@ -16,7 +16,7 @@
             </div>
             <div class="column">
                 {{ form_row(form.priority) }}
-                {#{{ form_row(form.channels) }}#}
+                {{ form_row(form.channels) }}
             </div>
         </div>
         <h4 class="ui dividing header">{{ 'sylius.ui.start_date'|trans }} & {{ 'sylius.ui.end_date'|trans }}</h4>
